Revert "gap fixed"
This reverts commit 437ad3059bb73ca884ad83beab2f7481216088ba.

--- a/style.css
+++ b/style.css
@@ -321,10 +321,6 @@ h2+p {
     gap: 80px;
 }
 
-.contact-form-container p {
-    margin-bottom: 35px;
-}
-
 .lead-form input,
 .lead-form select {
     width: 100%;
